--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="size_big">大</string>
     <string name="find_treasure">找到宝藏</string>
     <string name="navigation">开始导航</string>
+    <string name="account_msg">个人信息</string>
 
 </resources>
